fix: improve readability of the blog posts

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -59,7 +59,7 @@ html ::selection {
 }
 
 .formatted-text {
-  @apply leading-relaxed;
+  @apply leading-relaxed text-lg;
 }
 
 .formatted-text p,
